# ManifyAuxPro

./: .gitignore  CMakeLists.txt  MaNiFyAuxPro.jucer  README.md
.github/workflows/: build.yml
Resources/Branding/: manify_logo_placeholder.txt
Source/: JuceHeader.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SamplerEngine.cpp  SamplerEngine.h
